# X_cloning

./: .dockerignore  docker-compose.yml  readme.md
backend/: .gitignore  pyproject.toml
backend/follows/migrations/: 0001_initial.py  0002_initial.py
backend/follows/models/: __init__.py  follows_models.py
backend/follows/serializers/: __init__.py  follows_serializer.py
backend/follows/tests/: follows_test.py
backend/follows/viewsets/: __init__.py  follows_viewset.py
backend/login/: urls.py
backend/login/migrations/: 0001_initial.py  0002_remove_customuser_is_approved.py  0003_customuser_created_at.py  0004_customuser_is_subscribed.py  0005_customuser_is_premium_alter_customuser_is_superuser.py  0006_remove_customuser_is_subscribed.py  0007_remove_customuser_bio_and_more.py
backend/login/models/: __init__.py  user_model.py
backend/login/serializers/: __init__.py  check_email_serializer.py  logout_serializer.py  reset_password_serializer.py  token_serializer.py  user_serializer.py
backend/login/tests/: __init__.py  user_test.py
backend/login/viewsets/: check_email_views.py  logout_views.py  reset_password_views.py  token_views.py  user_views.py
backend/notifications/migrations/: 0001_initial.py
backend/notifications/models/: __init__.py  notification_models.py
backend/notifications/serializers/: __init__.py  notifications_serializer.py
backend/notifications/tests/: __init__.py  notifications_test.py
backend/notifications/viewsets/: __init__.py  notifications_viewset.py
backend/twitter_clone/: settings.py  urls.py
(+36 files in other folders)
